# ros-time-sync

./: .gitignore  CMakeLists.txt  package.xml
msg/: synced_frame.msg
sync_vid_tag_pose/: CMakeLists.txt  Doxyfile
sync_vid_tag_pose/doc/html/: annotated.html  classes.html  classsync__publisher__t-members.html  classsync__publisher__t.html  classvideo__writer__t-members.html  classvideo__writer__t.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_017ad5e908c41501f6a06b5119b37293_dep.map  dir_017ad5e908c41501f6a06b5119b37293_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_83e2d55a1fa4ef84a58bad1a77e1b285.html  dir_83e2d55a1fa4ef84a58bad1a77e1b285_dep.map  dir_83e2d55a1fa4ef84a58bad1a77e1b285_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.html  dir_ece6c8c331d1368a4f7abdf0965b24e2.html  dir_ece6c8c331d1368a4f7abdf0965b24e2_dep.map  dir_ece6c8c331d1368a4f7abdf0965b24e2_dep.md5  files.html  functions.html  functions_func.html  graph_legend.html  index.html  sync__vid__tag__pose_8hpp_source.html  video__writer__t_8hpp_source.html
sync_vid_tag_pose/doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  classes_1.js  functions_0.js  functions_1.js  searchdata.js
sync_vid_tag_pose/inc/: sync_vid_tag_pose.hpp  vid_frame_writer_t.hpp  video_writer_t.hpp
sync_vid_tag_pose/src/: main.cpp  sync_vid_tag_pose.cpp  vid_frame_writer_t.cpp  video_writer_t.cpp
